fixed: `bugs` — overflow, and resizing images

--- a/src/assets/scss/modules/_main.scss
+++ b/src/assets/scss/modules/_main.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 6rem;
+  overflow: hidden;
 
   &-container {
     max-width: 64rem;
